Closed
Bug 380538
Opened 18 years ago
Closed 18 years ago
<body ononline="..." onoffline="..."> doesn't work
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: asqueella, Assigned: cajbir)
References
Details
(Keywords: testcase)
Attachments
(2 files)
1.56 KB,
text/html
|
Details | |
7.60 KB,
patch
|
smaug
:
review+
sicking
:
superreview+
|
Details | Diff | Splinter Review |
See the testcase. When you specify both attribute handlers in an HTML document, one of them doesn't get called. I think I saw a similar problem with <xul:window ononline=... onoffline=...>
Reporter | ||
Comment 1•18 years ago
|
||
(The testcase needs to be opened locally, as it requests enhanced privileges.)
Reporter | ||
Comment 2•18 years ago
|
||
This is responsible for some of todo()s in bug 336682 mochitests.
Flags: in-testsuite?
Flags: blocking1.9?
Dave: Can you have a look at this and figure out if it's an online/offline problem, or an events problem.
Assignee: general → dcamp
Flags: blocking1.9? → blocking1.9+
Assignee | ||
Updated•18 years ago
|
Assignee: dcamp → chris.double
Assignee | ||
Comment 4•18 years ago
|
||
Fixes the problem where if both an ononline and onoffline attribute was used in <body.../> then only the last one in the order that they appeared would work.
Attachment #264962 -
Flags: superreview?(jonas)
Attachment #264962 -
Flags: review?(jonas)
Comment 5•18 years ago
|
||
Comment on attachment 264962 [details] [diff] [review]
Patch to fix issue when defining both offline and online handles in the body element
So this is a regression from Bug 366478, right?
Attachment #264962 -
Flags: review?(jonas) → review+
Attachment #264962 -
Flags: superreview?(jonas) → superreview+
Assignee | ||
Comment 6•18 years ago
|
||
No, it was caused by the online/offline additions to it not being complete.
checked in.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•