Bug 380538. Allow both ononline and onoffline to be specified in the body element. patch by Chris Double, r=Olli.Pettay,sr=jonas