content/events/src/nsDOMEvent.cpp
@@ -70,7 +70,7 @@ static const char* const sEventNames[] = {
   "DOMNodeRemovedFromDocument", "DOMNodeInsertedIntoDocument",
   "DOMAttrModified", "DOMCharacterDataModified",
   "DOMActivate", "DOMFocusIn", "DOMFocusOut",
-  "pageshow", "pagehide", "DOMMouseScroll"
+  "pageshow", "pagehide", "DOMMouseScroll", "offline", "online"
 #ifdef MOZ_SVG
  ,
   "SVGLoad", "SVGUnload", "SVGAbort", "SVGError", "SVGResize", "SVGScroll",
@@ -438,6 +438,10 @@ nsDOMEvent::SetEventType(const nsAString& aEventTypeArg)
       mEvent->message = NS_IMAGE_ABORT;
     else if (atom == nsGkAtoms::onerror)
       mEvent->message = NS_LOAD_ERROR;
+    else if (atom == nsGkAtoms::onoffline)
+      mEvent->message = NS_OFFLINE;
+    else if (atom == nsGkAtoms::ononline)
+      mEvent->message = NS_ONLINE;
   } else if (mEvent->eventStructType == NS_MUTATION_EVENT) {
     if (atom == nsGkAtoms::onDOMAttrModified)
       mEvent->message = NS_MUTATION_ATTRMODIFIED;
@@ -1234,6 +1238,10 @@ const char* nsDOMEvent::GetEventName(PRUint32 aEventType)
     return sEventNames[eDOMEvents_pagehide];
   case NS_MOUSE_SCROLL:
     return sEventNames[eDOMEvents_DOMMouseScroll];
+  case NS_OFFLINE:
+    return sEventNames[eDOMEvents_offline];
+  case NS_ONLINE:
+    return sEventNames[eDOMEvents_online];
 #ifdef MOZ_SVG
   case NS_SVG_LOAD:
     return sEventNames[eDOMEvents_SVGLoad];
